<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <DUT Name="SYSTEM_STATE" Id="{21a423ff-88ad-476e-bbeb-bee1bbc2c86b}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
{attribute 'strict'}
TYPE SYSTEM_STATE :
(
	SYSTEM_READY,
	CONSOLE_CONTROL,
	REMOTE_CONTROL
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>